--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,8 @@
   <link rel="stylesheet" href="css/foundation.css" />
   <link rel="stylesheet" href="css/chat.css" />
   <script src="js/vendor/modernizr.js"></script>
+
+  <script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
 </head>
 <body>
   
@@ -38,7 +40,9 @@
     </div>      
   </div>    
 </div>
-</div>
+<script type="text/javascript">
+  $("#ventanaChat").hide();
+</script>
 
 <!-- Footer -->
 <footer class="row">
@@ -55,7 +59,6 @@
   </div>
 </footer>
 
-<script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
 <script src="/socket.io/socket.io.js"></script>
 <script src="js/foundation.min.js"></script>
 <script src="main.js"></script>
